[package]
name = "holland2stay-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
serde_json = "1.0.137"
thiserror = "2.0.11"
teloxide = { version = "0.13", features = ["macros", "throttle", "rustls", "ctrlc_handler"], default-features = false }
log = "0.4.25"
pretty_env_logger = "0.5.0"
once_cell = "1.20.2"
env_logger = "0.11.6"
dotenv = "0.15.0"
derive-new = "0.7.0"
derive_more = { version = "2", features = ["full"] }
futures = "0.3.31"
